RESOLVED FIXED279868
REGRESSION (283725@main): [Writing Tools] Rewritten text is selected during replacement animation
https://bugs.webkit.org/show_bug.cgi?id=279868
Summary REGRESSION (283725@main): [Writing Tools] Rewritten text is selected during r...
Aditya Keerthi
Reported 2024-09-17 22:29:43 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-17 22:30:08 PDT
Aditya Keerthi
Comment 2 2024-09-17 22:35:52 PDT
EWS
Comment 3 2024-09-17 23:36:37 PDT
Committed 283827@main (80fc229f71fe): <https://commits.webkit.org/283827@main> Reviewed commits have been landed. Closing PR #33809 and removing active labels.
EWS
Comment 4 2024-09-19 19:18:28 PDT
Committed 280938.361@safari-7619-branch (687d4c968228): <https://commits.webkit.org/280938.361@safari-7619-branch> Reviewed commits have been landed. Closing PR #1857 and removing active labels.
EWS
Comment 5 2024-09-20 15:46:24 PDT
Committed 283286.112@safari-7620-branch (8fc1a5d899ae): <https://commits.webkit.org/283286.112@safari-7620-branch> Reviewed commits have been landed. Closing PR #1869 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.