REGRESSION (283725@main): [Writing Tools] Rewritten text is selected during replacement animation https://bugs.webkit.org/show_bug.cgi?id=279868 rdar://136199712

Reviewed by Richard Robinson.

Writing Tools rewrites are performed using `ReplaceSelectionCommand` with the
`SelectReplacement` option. However, the user should only see the updated
selection once all animations are complete. To support this, intermediate
selections are cleared after replacement, and only the final content is selected
in `WritingToolsController::intelligenceTextAnimationsDidComplete`.

283725@main applied the replacement command after the call to clear the
selection, resulting in the selection being set too early, before the call to
`WritingToolsController::intelligenceTextAnimationsDidComplete`.

Fix by re-ordering the command application to occur before clearing the selection.

* Source/WebCore/page/writing-tools/WritingToolsController.mm:
(WebCore::WritingToolsController::compositionSessionDidReceiveTextWithReplacementRangeAsync):

Canonical link: https://commits.webkit.org/283827@main